$Id$

2016-03-28  Christian Franke  <franke@computer.org>

	configure.ac: Write configuration summary also to config.log.

2016-03-28  Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd.cpp: Add initial FreeBSD NVMe support (ticket #657)

2016-03-27  Christian Franke  <franke@computer.org>

	ataprint.cpp: Support POWER MODE values introduced in ATA ACS-2
	(ticket #184, smartctl only).

2016-03-27  Thomas Gatterweh  <thomas_gatterweh@hotmail.com>

	atacmds.cpp, smartd.cpp: Support POWER MODE values introduced
	in ATA ACS-2 (ticket #184, smartd only).

2016-03-26  Christian Franke  <franke@computer.org>

	os_win32.cpp: Rearrange code such that no forward declarations
	are needed.

	os_freebsd.cpp, os_netbsd.cpp, os_openbsd.cpp, os_solaris.cpp,
	utility.cpp: Remove variable 'bytes'.  Only used for a memory
	leak check which was removed in r2629 (2008-08-29).

	os_solaris.cpp, utility.cpp, utility.h:
	Remove CustomStrDup(), use strdup() instead.

	dev_legacy.cpp, utility.cpp, utility.h:
	Remove FreeNonZero(), use free() instead.

	smartctl.cpp, smartd.cpp, utility.cpp, utility.h:
	Remove split_report_arg(), use sscanf() instead.

	Add basic NVMe support for smartd (-H -l error -W):
	Makefile.am, os_win32/vc10/smartd.vcxproj: Add nvmecmds.cpp to smartd.
	smartd.cpp: Add NVMeDeviceScan() and NVMeCheckDevice().
	smartd.8.in, smartd.conf.5.in: Document NVMe support.

	nvmeprint.cpp: Remove ary_to_str().
	utility.cpp, utility.h: Add format_char_array().

2016-03-24  Christian Franke  <franke@computer.org>

	dev_interface.cpp: Add missing 'usbprolific' to help text.

	nvmecmds.cpp, nvmeprint.cpp: Add support for '-q noserial'.

	smartd.cpp: Remove outdated declaration of getdomainname().

	utility.cpp: Add C++ language version to output of -V option.

2016-03-20  Christian Franke  <franke@computer.org>

	nvmecmds.cpp, nvmecmds.h, nvmeprint.cpp, nvmeprint.h, smartctl.cpp:
	Add options '-l error[,NUM]' and '-l nvmelog,PAGE,SIZE' for NVMe
	devices.